<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MultiShimmerGraph</string>
    <string name="connect">Connect a Shimmer</string>
    <string name="disconnect">Disconnect Shimmer</string>
    <string name="startstream">Start streaming</string>
    <string name="stopstream">Stop streaming</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a Shimmer to connect</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="settingsdev1">Settings Dev1</string>
    <string name="settingsdev2">Settings Dev2</string>
    <string name="sensorvalue1">Shimmer 1</string>
    <string name="sensorvalue2">Shimmer 1</string>
    <string name="sensorvalue3">Shimmer 1</string>
    <string name="sensorvalue4">Shimmer 2</string>
    <string name="sensorvalue5">Shimmer 2</string>
    <string name="sensorvalue6">Shimmer 2</string>
    <string name="label_sensor1">Sensor1</string>
    <string name="label_sensor2">Sensor2</string>
    <string name="label_sensor3">Sensor3</string>
    <string name="configure_device">Configure Shimmer</string>
    <string name="one_point_five_g">Set Accel range to \u00B11.5G</string>
    <string name="six_g">Set Accel range to \u00B16G</string>
    <string name="button_1">Connect</string>
    <string name="viewsensordev1">Edit Graph Dev1</string>
    <string name="viewsensordev2">Edit Graph Dev2</string>
    <string name="enable_sensors_done">Done</string>
</resources>
