<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/stream" android:title="@string/startstream" android:icon="@drawable/ic_menu_play_clip"></item><item android:id="@+id/scan" 
    	  android:icon="@android:drawable/ic_menu_search" android:title="@string/connect">
    </item>
    <item android:title="@string/settingsdev1" android:icon="@android:drawable/ic_menu_preferences" android:id="@+id/settingsdev1"></item>
    <item android:id="@+id/viewsensordev1" android:title="@string/viewsensordev1"></item>
    <item android:id="@+id/settingsdev2" android:title="@string/settingsdev2" android:icon="@android:drawable/ic_menu_preferences"></item>
    <item android:id="@+id/viewsensordev2" android:title="@string/viewsensordev2"></item>

    
</menu>
